; ModuleID = '/home/carl/AnghaBench/libgit2/tests/submodule/extr_nosubs.c_test_submodule_nosubs__bad_gitmodules.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/submodule/extr_nosubs.c_test_submodule_nosubs__bad_gitmodules.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"status\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"status/.gitmodules\00", align 1
@.str.2 = private unnamed_addr constant [67 x i8] c"[submodule \22foobar\22]\09path=blargle\0A\09url=\0A\09branch=\0A\09update=flooble\0A\0A\00", align 1
@.str.3 = private unnamed_addr constant [66 x i8] c"[submodule \22foobar\22]\09path=blargle\0A\09url=\0A\09branch=\0A\09update=rebase\0A\0A\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"foobar\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [7 x i8] c"subdir\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_submodule_nosubs__bad_gitmodules() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* @cl_git_sandbox_init(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store i32* %2, i32** %1, align 8
  %3 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @cl_git_rewritefile(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.3, i64 0, i64 0))
  %5 = load i32*, i32** %1, align 8
  %6 = call i32 @git_submodule_lookup(i32* null, i32* %5, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0))
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32, i32* @GIT_ENOTFOUND, align 4
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @git_submodule_lookup(i32* null, i32* %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0))
  %11 = call i32 @cl_assert_equal_i(i32 %8, i32 %10)
  ret void
}

declare dso_local i32* @cl_git_sandbox_init(i8*) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_git_rewritefile(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_submodule_lookup(i32*, i32*, i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
